[gd_scene load_steps=18 format=2]

[ext_resource path="res://SEGOEUI.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://Theme.tres" type="Theme" id=2]
[ext_resource path="res://Main/EntryOptions.gd" type="Script" id=3]
[ext_resource path="res://Login/view.png" type="Texture" id=4]
[ext_resource path="res://Main/document-editor.png" type="Texture" id=5]
[ext_resource path="res://Main/delete.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=61]
size = 20
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=60]
content_margin_left = 18.0
bg_color = Color( 1, 0.945098, 0.870588, 1 )

[sub_resource type="DynamicFont" id=26]
size = 20
outline_size = 1
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=54]
content_margin_left = 8.0
content_margin_right = 14.0
content_margin_top = 6.0
content_margin_bottom = 6.0
bg_color = Color( 0.1116, 0.47988, 0.93, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id=24]
content_margin_left = 8.0
content_margin_right = 14.0
content_margin_top = 6.0
content_margin_bottom = 6.0
bg_color = Color( 0.121569, 0.521569, 1, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id=57]
content_margin_left = 8.0
content_margin_right = 14.0
content_margin_top = 6.0
content_margin_bottom = 6.0
bg_color = Color( 0.216, 0.2988, 0.4, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id=55]
content_margin_left = 6.0
bg_color = Color( 0.93, 0.6665, 0, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id=29]
content_margin_left = 6.0
bg_color = Color( 1, 0.709804, 0, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id=56]
content_margin_left = 6.0
bg_color = Color( 0.92, 0.1104, 0.1104, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id=25]
content_margin_left = 6.0
bg_color = Color( 1, 0.121569, 0.121569, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id=58]
content_margin_left = 6.0
bg_color = Color( 0.58, 0.29, 0.29, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="item2" type="HBoxContainer"]
margin_top = 52.0
margin_right = 1016.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.0
custom_constants/separation = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name" type="LineEdit" parent="."]
margin_right = 246.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.24
theme = ExtResource( 2 )
custom_colors/font_color_uneditable = Color( 0.721569, 0.113725, 0.105882, 1 )
custom_fonts/font = SubResource( 61 )
custom_styles/read_only = SubResource( 60 )
text = "Name"
editable = false
selecting_enabled = false

[node name="age" type="LineEdit" parent="."]
margin_left = 248.0
margin_right = 318.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.0
custom_colors/font_color_uneditable = Color( 0.721569, 0.113725, 0.105882, 1 )
custom_fonts/font = SubResource( 61 )
custom_styles/read_only = SubResource( 60 )
text = "Age"
align = 1
editable = false
selecting_enabled = false

[node name="sex" type="LineEdit" parent="."]
margin_left = 320.0
margin_right = 390.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.0
custom_colors/font_color_uneditable = Color( 0.721569, 0.113725, 0.105882, 1 )
custom_fonts/font = SubResource( 61 )
custom_styles/read_only = SubResource( 60 )
text = "Sex"
align = 1
editable = false
selecting_enabled = false

[node name="position" type="LineEdit" parent="."]
margin_left = 392.0
margin_right = 603.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.06
custom_colors/font_color_uneditable = Color( 0.721569, 0.113725, 0.105882, 1 )
custom_fonts/font = SubResource( 61 )
custom_styles/read_only = SubResource( 60 )
text = "Position"
align = 1
editable = false
selecting_enabled = false

[node name="department" type="LineEdit" parent="."]
margin_left = 605.0
margin_right = 814.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.05
custom_colors/font_color_uneditable = Color( 0.721569, 0.113725, 0.105882, 1 )
custom_fonts/font = SubResource( 61 )
custom_styles/read_only = SubResource( 60 )
text = " Department"
align = 1
editable = false
selecting_enabled = false

[node name="settings" type="HBoxContainer" parent="."]
margin_left = 816.0
margin_right = 1016.0
margin_bottom = 48.0
size_flags_horizontal = 3

[node name="edit" type="Button" parent="settings"]
margin_right = 104.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.38
theme = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 26 )
custom_styles/hover = SubResource( 54 )
custom_styles/pressed = SubResource( 24 )
custom_styles/disabled = SubResource( 57 )
custom_styles/normal = SubResource( 24 )
enabled_focus_mode = 0
text = "Edit"
icon = ExtResource( 5 )
align = 2
expand_icon = true
script = ExtResource( 3 )

[node name="view" type="Button" parent="settings"]
margin_left = 108.0
margin_right = 152.0
margin_bottom = 48.0
size_flags_horizontal = 3
custom_styles/hover = SubResource( 55 )
custom_styles/pressed = SubResource( 29 )
custom_styles/normal = SubResource( 29 )
icon = ExtResource( 4 )
expand_icon = true
script = ExtResource( 3 )

[node name="delete" type="Button" parent="settings"]
margin_left = 156.0
margin_right = 200.0
margin_bottom = 48.0
size_flags_horizontal = 3
custom_styles/hover = SubResource( 56 )
custom_styles/pressed = SubResource( 25 )
custom_styles/disabled = SubResource( 58 )
custom_styles/normal = SubResource( 25 )
icon = ExtResource( 6 )
expand_icon = true
script = ExtResource( 3 )

[connection signal="pressed" from="settings/edit" to="settings/edit" method="editEntry"]
[connection signal="pressed" from="settings/view" to="settings/view" method="viewEntry"]
[connection signal="pressed" from="settings/delete" to="settings/delete" method="deleteEntry"]
